# Omninew

./: .gitignore  README.md
.do/: app-platform.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: providers.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: agent.py  agent_tools.py  assistant.py  auth.py  billing.py  chat.py  health.py  leads.py  products.py  shopify.py  tenants.py  transcripts.py  voice.py  webhooks.py
apps/api/app/core/: config.py  database.py
apps/api/app/prompts/: do_agent_blueprint.py  system_prompt.py
apps/api/app/schemas/: common.py
apps/api/app/services/: agent_tool_service.py  billing_service.py  conversation_service.py  do_agent_service.py  lead_service.py  livekit_service.py  policy_sync_service.py  product_sync_service.py  shopify_auth_service.py  shopify_service.py  tenant_service.py  transcript_service.py
apps/api/app/tools/: registry.py
apps/api/tests/: test_agent_routes.py  test_auth_routes.py  test_billing_routes.py  test_saas_routes.py
apps/do-functions/: project.yml
apps/do-functions/.deployed/: versions.json
apps/web/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts  data.ts  tenant-context.ts  types.ts
apps/web/public/: widget.js
docs/: deployment.md  do-agent-setup.md
supabase/migrations/: 20260401_000001_init_shopify_ai.sql  20260401_000002_multi_tenant_saas.sql  20260401_000003_billing_foundation.sql
(+26 files in other folders)
